# parquet-example-rs

./: .gitignore  Cargo.toml  README.md  dhat-heap_none.json
doc/: dhat-heap_page.json
src/: columns_builder.rs  main.rs  schema.rs
